Mod/sources/tab-bar.css
/* Blend the background with the panel bar when transparent */
#browser.transparent-tabbar #header {
  background-color: var(--colorBgAlphaBlur);
}
.transparent-tabbar #tabs-subcontainer {
  background-color: transparent;
}

/* Give room for increased width of panel when it is shown */
#browser:not(.horizontal-menu) #tabs-container:not(.none).top,
#browser.horizontal-menu:has(#panels-container:not([style*="width: 0px;"])) #tabs-container:not(.none).top {
  margin-left: var(--GXpanelWidth);
  padding-left: unset;
}
#browser:not(.horizontal-menu) #tabs-subcontainer.visible,
#browser.horizontal-menu:has(#panels-container:not([style*="width: 0px;"])) #tabs-subcontainer.visible {
  margin-left: var(--arePanelsSetToRight, var(--GXpanelWidth));
  margin-right: var(--arePanelsSetToLeft, var(--GXpanelWidth));
}

/* Hide background on workspace button when on tab bar */
/* also prevent hovered state from overlaping border */
.tabbar-workspace-button.workspace-popup {
  background-color: transparent !important;
  margin-bottom: 1px;
}
.button-toolbar.workspace-popup.tabbar-workspace-button button {
  height: 29px;
}

/* Remove default border below/above tab bar */
.address-bottom #tabs-tabbar-container.top,
.address-bottom-off #tabs-tabbar-container.top,
.address-top-off #tabs-tabbar-container.top,
.address-top #tabs-tabbar-container.bottom,
.address-top-off #tabs-tabbar-container.bottom,
.address-bottom-off #tabs-tabbar-container.bottom {
  border-bottom: unset;
  border-top: unset;
}

/* Remove default border around inactive tab stacks */
.svg-tab-stack {
  display: none;
}

/* For lower border to the left of the active tab */
#tabs-container,
#tabs-subcontainer {
  position: relative;
}
#tabs-container::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: var(--arePanelsSetToRight, 0);
  right: var(--arePanelsSetToLeft, var(--GXpanelWidth));
  height: 1px;
  width: 100%;
  background-color: var(--GXborderColor);
}
#tabs-subcontainer::before {
  right: var(--arePanelsSetToLeft, 0);
}
/* When the panel is hidden contine the border all the way */
#browser:has(#panels-container[style*="width: 0px;"]) #tabs-container::before {
  left: calc(-1 * var(--GXpanelWidth));
}

/* Cover up the lower border to the right of the active tab */
#tabs-container .tab-position:has(.tab.active)::before {
  content: "";
  position: absolute;
  bottom: 0;
  right: var(--arePanelsSetToLeft, 2px);
  left: var(--arePanelsSetToRight, 1px);
  height: 1px;
  width: 100vw;
  background-color: var(--colorAccentBg);
}

/* Fix missing border on 2nd level tabs for certain screens */
#tabs-subcontainer {
  overflow-x: hidden;
}
#tabs-subcontainer .tab-position:has(.tab.active)::before {
  content: "";
  position: absolute;
  bottom: 0;
  right: var(--arePanelsSetToRight, var(--Width));
  left: var(--arePanelsSetToLeft, var(--Width));
  height: 1px;
  width: 100vw;
  background-color: var(--GXborderColor);
}

/* Have gradient lower border to the right of the active tab */
/* Different lengths depending on the number of tabs */
#tabs-container:not([style*="flex-grow: 0;"]) .tab-position.tab-position:has(> .tab.active)::after,
#tabs-subcontainer .tab-position:has(> .tab.active)::after {
  --modLineWidth: 25vw;
  content: " ";
  position: absolute;
  bottom: 0px;
  right: calc(calc(var(--modLineWidth) - 1px) * -1);
  height: 1px;
  width: var(--modLineWidth);
  background-image: linear-gradient(to right, var(--GXborderColor), transparent);
}
.tab-strip > span:nth-child(1) > .tab-position:has(> .tab.active)::after,
.tab-strip > span:nth-child(2) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 50vw !important;
}
.tab-strip > span:nth-child(3) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 40vw !important;
}
.tab-strip > span:nth-child(4) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 35vw !important;
}
.tab-strip > span:nth-child(5) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 30vw !important;
}
/* Flip for panelson the right */
#browser:has(#panels-container.right) #tabs-container:not([style*="flex-grow: 0;"]) .tab-position.tab-position:has(> .tab.active)::after,
#browser:has(#panels-container.right) #tabs-subcontainer .tab-position:has(> .tab.active)::after {
  --modLineWidth: 50vw;
  left: calc(calc(var(--modLineWidth) - 1px) * -1);
  background-image: linear-gradient(to left, var(--GXborderColor), transparent);
}
#browser:has(#panels-container.right) .tab-strip > span:nth-child(1) > .tab-position:has(> .tab.active)::after,
#browser:has(#panels-container.right) .tab-strip > span:nth-child(2) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 30vw !important;
}
#browser:has(#panels-container.right) .tab-strip > span:nth-child(3) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 35vw !important;
}
#browser:has(#panels-container.right) .tab-strip > span:nth-child(4) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 40vw !important;
}
#browser:has(#panels-container.right) .tab-strip > span:nth-child(5) > .tab-position:has(> .tab.active)::after {
  --modLineWidth: 50vw !important;
}

/* Borders left/top/right around active tab */
#tabs-tabbar-container .tab {
  border: 1px solid transparent;
  border-bottom-width: 0;
}
#tabs-tabbar-container .tab.active {
  border-color: var(--GXborderColor);
}

/* Hide 2nd level tab border when on panel side edge */
#browser:has(#panels-container.left) #tabs-subcontainer span:first-of-type .tab.active {
  border-left: unset;
  padding-left: 1px;
}

/* Remove gap between main and secondary tab bars */
.tabs-top .tab-position .tab.insubstrip,
.tabs-bottom .tab-position .tab.insubstrip {
  margin: 0;
}

/* Border on the left of the 2nd level tab bar */
#tabs-subcontainer .tab-strip {
  border-left: var(--arePanelsSetToRight, 1px solid var(--GXborderColor));
}
#tabs-subcontainer {
  border-right: var(--arePanelsSetToLeft, 1px solid var(--GXborderColor)) !important;
}
/* ... */

